--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Merienda:wght@300..900&family=Noto+Kufi+Arabic:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -15,11 +15,19 @@ body {
   background: var(--background);
 }
 
+html[dir="rtl"] {
+  direction: rtl;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
 .custom-font{
+  font-family: 'El Messiri', Arial, Helvetica, sans-serif;
+}
+
+.custom-font2{
   font-family: 'Merienda', Arial, Helvetica, sans-serif;
 }
 
