--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,15 @@ html {
   box-shadow: none !important;
   outline: none !important;
 }
+
+.typewriter-text {
+  font-size: 24px; /* Adjust size as needed */
+}
+
+/* For smaller screens (e.g., mobile) */
+@media (max-width: 768px) {
+  .typewriter-text {
+    font-size: 18px; /* Smaller font size for mobile */
+    white-space: nowrap; /* Prevent text from wrapping */
+  }
+}
