--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Messiri';
+  src: url('./fonts/ElMessiri-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Merienda';
+  src: url('./fonts/Merienda-VariableFont_wght.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.custom-font{
+  font-family: 'Messiri';
+}
+
+.custom-font2{
+  font-family: 'Merienda';
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
